_Source/force-app/main/default/objects/BI_Objective_Type__c/BI_Objective_Type__c.object-meta.xml
<CustomObject>
    <label>Objective Type</label>
    <nameField>
        <label>Objective Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objective Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>