_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Auto_Create_Objective__c.field-meta.xml
<CustomField>
    <fullName>BI_Auto_Create_Objective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Create Objective</label>
    <type>Checkbox</type>
</CustomField>