_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Available_for_Conversation_Topics__c.field-meta.xml
<CustomField>
    <fullName>BI_Available_for_Conversation_Topics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Conversation Topics</label>
    <type>Checkbox</type>
</CustomField>