_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>