_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Division__c</fullName>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>