_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Lookup_Identifier__c.field-meta.xml
<CustomField>
    <fullName>BI_Lookup_Identifier__c</fullName>
    <formula>BI_Objective_Name__c  &amp; &apos; - &apos; &amp; &apos;Valid For: &apos; &amp; 

IF(INCLUDES(BI_Relevant_Plans__c,&quot;Divisional Plan&quot;),&quot;Divisional Plan;&quot;,null)&amp;
IF(INCLUDES(BI_Relevant_Plans__c,&quot;Regional Plan&quot;),&quot;Regional Plan;&quot;,null)&amp;
IF(INCLUDES(BI_Relevant_Plans__c,&quot;Territory Plan&quot;),&quot;Territory Plan;&quot;,null)</formula>
    <label>Lookup Identifier</label>
    <type>Text</type>
</CustomField>