_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Measure__c.field-meta.xml
<CustomField>
    <fullName>BI_Measure__c</fullName>
    <label>Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Objective_Measure</valueSetName>
    </valueSet>
</CustomField>