_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Objective_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Objective Category</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>BI_Objective_Category__c.BI_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Objective_Category__c</referenceTo>
    <relationshipLabel>Objective Types</relationshipLabel>
    <relationshipName>Objective_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>