_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Name__c</fullName>
    <label>Objective Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>