_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Region__c.field-meta.xml
<CustomField>
    <fullName>BI_Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Region</valueSetName>
    </valueSet>
</CustomField>