_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Relevant_Plans__c.field-meta.xml
<CustomField>
    <fullName>BI_Relevant_Plans__c</fullName>
    <label>Relevant Plans</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divisional Plan</fullName>
            </value>
            <value>
                <fullName>Regional Plan</fullName>
            </value>
            <value>
                <fullName>Territory Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>