_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Target_Date__c</fullName>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>