_Source/force-app/main/default/objects/BI_Objective_Type__c/fields/BI_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>BI_Target_Value__c</fullName>
    <label>Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>