_Source/force-app/main/default/objects/BI_Objective_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BI_Objective_Name__c</columns>
    <columns>BI_Description__c</columns>
    <columns>BI_Objective_Category__c</columns>
    <columns>NAME</columns>
    <columns>BI_Active__c</columns>
    <columns>BI_Focus_Accounts__c</columns>
    <columns>BI_Auto_Create_Objective__c</columns>
    <columns>BI_Available_for_Conversation_Topics__c</columns>
    <columns>BI_Relevant_Plans__c</columns>
    <columns>BI_Measure__c</columns>
    <columns>BI_Target_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Objective Types</label>
</ListView>